<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/pilihGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/pilihMale"
            android:layout_width="@dimen/_80sdp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="Laki-Laki"
            android:textColor="@drawable/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/pilihFemale"
            android:gravity="center"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="Perempuan"
            android:textColor="@drawable/radio_flat_text_selector" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/label_bobot"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/tambahBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbBerat"
        android:text="@string/logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kurangBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="152dp"
        android:onClick="krgBerat"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputBerat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/kurangBerat"
        app:layout_constraintStart_toEndOf="@+id/kurangBerat"
        app:layout_constraintTop_toTopOf="@+id/kurangBerat"
        app:layout_constraintVertical_bias="0.476" />



    <TextView
        android:id="@+id/label_Tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="228dp"
        android:gravity="center_horizontal"
        android:text="@string/height"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kurangTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="296dp"
        android:onClick="krgTinggi"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/kurangTinggi"
        app:layout_constraintStart_toEndOf="@+id/kurangTinggi"
        app:layout_constraintTop_toTopOf="@+id/kurangTinggi"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/tambahTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbTinggi"
        android:text="@string/logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="376dp"
        android:gravity="center_horizontal"
        android:text="@string/labelUmur"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tambahUmur"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbUmur"
        android:text="@string/logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kurangUmur"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="424dp"
        android:onClick="krgUmur"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/kurangUmur"
        app:layout_constraintStart_toEndOf="@+id/kurangUmur"
        app:layout_constraintTop_toTopOf="@+id/kurangUmur" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="496dp"
        android:onClick="calculateBMI"
        android:text="@string/calculateBMI"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
